fixing z-index at floating button

--- a/assets/style/1.body.css
+++ b/assets/style/1.body.css
@@ -15,6 +15,7 @@ body {
 	bottom:40px;
 	right:50px;
 	text-align:center;
+  z-index: 1;
 }
 
 @media screen and (min-width: 1024px) {
